--- a/package.json
+++ b/package.json
@@ -10,10 +10,26 @@
   },
   "dependencies": {
     "chart.js": "^4.4.7",
-    "next": "15.1.0",
-    "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
-    "react-dom": "^18.3.1"
+    "bcryptjs": "^2.4.3",
+    "daisyui": "^4.12.22",
+    "dotenv": "^16.4.7",
+    "flowbite-react": "^0.10.2",
+    "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.456.0",
+    "mssql": "^11.0.1",
+    "multer": "^1.4.5-lts.1",
+    "mysql2": "^3.11.5",
+    "next": "15.0.4",
+    "react": "^19.0.0",
+    "react-data-table-component": "^7.6.2",
+    "react-datepicker": "^7.5.0",
+    "react-dom": "^19.0.0",
+    "react-lottie": "^1.2.9",
+    "styled-components": "^6.1.13",
+    "sweetalert2": "^11.14.5",
+    "typeorm": "^0.3.20",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "postcss": "^8",
